[tool.poetry]
name = "orpheuslummis.info"
version = "0.1.0"
description = ""
authors = ["Orpheus Lummis <o@orpheuslummis.info>"]

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.3.1"
pypandoc = "^1.5"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
